--- a/janik_arnet.html
+++ b/janik_arnet.html
@@ -106,12 +106,12 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/Neue Fotos/Gianni gut.jpg">
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/Janik Arnet end.png">
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Gianni&nbsp;Moretti</h2>
-            <p>Trainer, Sportwissenschaftler i.A. <br/>
+            <h2>Janik&nbsp;Arnet</h2>
+            <p>Sporttherapeut Bsc<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
@@ -121,25 +121,18 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2020</div>
-        <div class="col-xs-9">Trainer Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+        <div class="col-lg-2 col-xs-3">Seit 2021</div>
+        <div class="col-xs-9">Sporttherapeut Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">2017-2018</div>
-        <div class="col-xs-9">Personal Trainer SetsandReps Training Club<br>Aufsicht Magglinger Gym</div>
+        <div class="col-lg-2 col-xs-3">Seit 2021</div>
+        <div class="col-xs-9">Hilfsassistent sportmedizinisches Ambulatorium<br>Universität Basel</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Street Workout</div>
+        <div class="col-lg-2 col-xs-3">seit 2015</div>
+        <div class="col-xs-9">Judo-/Ju-Jitsu-Trainer<br>verschiedener Vereine Luzern</div>
     </div> 
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">2016</div>
-        <div class="col-xs-9">Kaufmann Fisher Scientific GmbH Allschwil</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">2014-2015</div>
-        <div class="col-xs-9">Kaufmann IKEA Finance&Services AG, Pratteln<br>div. Sprachaufenthalte</div>
-    </div>
+    
 
     <div class="row section">
         <div class="col-xs-12">
@@ -148,9 +141,12 @@
     </div>
     <div class="row">
         <ul>
-            <li>2018 Beginn Bachelor of Science EHSM in Sports (BSc), Eidg. Hochschule für Sport, Magglingen </li>
-            <li>Kaufmann IKEA<br>Finance&Services AG, Pratteln 2014 </li>
-            <li>Diverse J+S Kurse </li>
+            <li>2021 Beginn Master of Science in Sport, Bewegung und Gesundheit Universität Basel</li>
+            <li>Bachelor of Science in Sport, Bewegung und Gesundheit Universität Basel 2021</li>
+            <li>J+S Ski, Judo/Ju-Jitsu, Schulsport </li>
+            <li>BLACKROLL® Trainer </li>
+            <li>langjährige Wettkampferfahrung Judo/Ju-Jitsu, seit 2014 Athlet im schweizerischen
+                Ju-Jitsu Nationalkader</li>
         </ul>
     </div>
     <div class="row">
