--- a/team.html
+++ b/team.html
@@ -234,18 +234,18 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Gianni&nbsp;Moretti</h1>
+                    <h1>Janik&nbsp;Arnet</h1>
                     <p>
-                        Trainer,&nbsp;Sportwissenschaftler&nbsp;i.A.&nbsp;
+                        Sporttheraaput&nbsp;Bsc&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
-                        <a href="gianni-moretti.html" role="button">
+                        <a href="janik_arnet.html" role="button">
                                 Mehr&hellip;
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Gianni gut.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Janik Arnet end.png">
             </div>  
         </div>                  
     </div>
