--- a/Kathrin.html
+++ b/Kathrin.html
@@ -122,7 +122,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2020</div>
-        <div class="col-xs-9">Betreuerin Fitness Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+        <div class="col-xs-9">Sporttherapeutin i.A. Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2020</div>
