--- a/Matthias_muehlberg.html
+++ b/Matthias_muehlberg.html
@@ -110,7 +110,7 @@
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Matthias&nbsp;Mühleberg</h2>
+            <h2>Matthias&nbsp;Mühlberg</h2>
             <p>Sporttherapeut i.A<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
