--- a/team.html
+++ b/team.html
@@ -270,15 +270,18 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
+                    <h1>Matthias&nbsp;Mühlberg</h1>
                     <p>
-                        Raumpflegerin
+                        Sporttherapeut i.A.
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
+                        <a href="Matthias_muehlberg.html" role="button">
+                            Mehr&hellip;
+                    </a>  
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">      
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Matthias Mühleberg end.png">      
             </div>
         </div>      
     </div
@@ -313,6 +316,20 @@
             </div> 
         </div> 
     </div> 
+    <div class="col-sm-6 col-xs-12">
+        <div class="portrait-well">
+            <div class="col-md-5 col-xs-12">
+                <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
+                <p>
+                    Raumpflegerin
+                    <br/>                                            
+                    <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                    <br/<>
+                </p>
+            </div>
+            <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">
+        </div>
+    </div>     
             
            
     <!--
