--- a/team.html
+++ b/team.html
@@ -316,6 +316,7 @@
             </div> 
         </div> 
     </div> 
+    <div class="row">
     <div class="col-sm-6 col-xs-12">
         <div class="portrait-well">
             <div class="col-md-5 col-xs-12">
