--- a/janik_arnet.html
+++ b/janik_arnet.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Janik&nbsp;Arnet</h2>
-            <p>Sporttherapeut Bsc<br/>
+            <p>Sporttherapeut BSc<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
