--- a/team.html
+++ b/team.html
@@ -236,7 +236,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Janik&nbsp;Arnet</h1>
                     <p>
-                        Sporttheraaput&nbsp;Bsc&nbsp;
+                        Sporttherapeut&nbsp;BSc&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
