--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <b></b> 
                
                     <b></b><br/> 
-                    <b></b>Ab Mo., 13.9.21 Zutritt als Abonnent:in nur noch mit gültigem Covid-Zertifikat.<br/>
+                    <b></b>Ab Mo., 13.9.21 Zutritt als Abonnent:in nur noch<br/> mit gültigem Covid-Zertifikat.<br/>
                     (Weitere Infos folgen, eine Stellungnahme des Fitnessverbandes ist noch ausstehend.)<br/>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
