--- a/team.html
+++ b/team.html
@@ -304,7 +304,7 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Safete&nbsp;Nuredini</h1>
+                    <h1>Samanta&nbsp;Demusi</h1>
                     <p>
                         Raumpflegerin
                         <br/>
@@ -312,7 +312,7 @@
                         <br/<>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Safete.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/samanta.jpg">
             </div> 
         </div> 
     </div> 
