--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                
                     <b></b><br/> 
                     <b></b>Ab Mo., 13.9.21 Zutritt als Abonnent:in nur noch<br/> mit gültigem Covid-Zertifikat.<br/>
-                    <p><<a href="docs/Schutzkonzept ab 08.09.2021 - Movimento Fitness.pdf" target="_blank">aktuelles Schutzkonzept</b></a><br/></p>
+                    <p><a href="docs/Schutzkonzept ab 08.09.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
                     <br/>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
