--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <b></b> 
                
                     <b></b><br/> 
-                    <b></b>Ab Mo., 13.9.21 Zutritt als Abonnent:in nur noch<br/> mit gültigem Covid-Zertifikat.<br/>
+                    <b></b>Zutritt als Fitnessabonnent:in nur noch<br/> mit gültigem Covid-Zertifikat.<br/>
                     <br/>
                     <p><a href="docs/Schutzkonzept ab 08.09.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
                     <br/>
@@ -370,7 +370,7 @@
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 - 16:30,</td>
+                    <td>09:00 - 16:30</td>
                
                 </tr>
                 <tr>
@@ -401,7 +401,7 @@
                     <td nowrap='true'>Fr:</td>
                     <td>07:30 – 20:00</td>
                     <td>&nbsp;</td>
-                    <td>13:00 - 14:00,</td>
+                    <td>13:00 - 14:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'></td>
