--- a/index.html
+++ b/index.html
@@ -356,11 +356,11 @@
 
             <a name="NeueOeffnungszeiten"></a>
             <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Auffahrt und Pfingsten.</a></p>
-            <table; vertical-align:middle">
+            <table>
         
                 <tr>
                     <th/>
-                    <th colspan="">Offen</th> 
+                    <th colspan=""; vertical-align:middle">Offen</th> 
                     <th>&nbsp;</th>                   
                     <th>Betreut</th>                                        
                 </tr>
@@ -370,7 +370,7 @@
                     <td nowrap='true'>Mo:</td>
                     <td">07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 – 16:30</td>
+                    <td;>09:00 – 16:30</td>
                
                 </tr>
                 <tr>
@@ -395,11 +395,11 @@
                     <td nowrap='true'>Do:</td>
                     <td>08:00 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 – 11:00</td>
+                    <td;>09:00 – 11:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Fr:</td>
-                    <td>07:30 – 20:00</td>
+                    <td;>07:30 – 20:00</td>
                     <td>&nbsp;</td>
                     <td>13:00 – 14:00</td>
                 </tr>
