--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         
                 <tr>
                     <th/>
-                    <th colspan=""; vertical-align:middle">Offen</th> 
+                    <th colspan="2"; vertical-align:middle">Offen</th> 
                     <th>&nbsp;</th>                   
                     <th>Betreut</th>                                        
                 </tr>
