--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                
                     <b></b><br/> 
                     <b></b>Zutritt als Fitnessabonnent:in nur noch<br/> mit gültigem Covid-Zertifikat (neu ab 6.12.21 2G).<br/>
-                    Für unsere Fitnesskund:innen ändert sich somit nichts,<br/> nur die Maskenpflicht gilt im Eingangsbereich und in den Garderoben.<br/>
+                    Für unsere Fitnesskund:innen ändert sich somit nichts, nur die Maskenpflicht gilt im Eingangsbereich und in den Garderoben.<br/>
                     <br/>
                     <p><a href="docs/Schutzkonzept ab 08.09.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
                     <br/>
