--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     Für unsere Fitnessabonnent:innen ändert sich somit nichts, nur die Maskenpflicht gilt neu wieder im Eingangsbereich und in den Garderoben.<br/>
                     <p><a href="docs/Schutzkonzept ab 06.12.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
                 
-                    <b></b>Bitte beachtene Sie unser <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
+                    <b></b>Bitte beachtene Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
