--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                 <b></b> 
                
                     <b></b>
-                    <b></b>Zutritt als Fitnessabonnent:in nur noch<br/> mit gültigem Covid-Zertifikat <b>2G</b><br/>
-                    Neu ab 6.12.21:<br/>
+                    <b></b>Zutritt als Fitnessabonnent:in nur noch<br/> mit gültigem Covid-Zertifikat <b>2G</b>.<br/>
+                    Neu ab 6.12.21:
                     Hygienemskenpflicht im gesamten Movimento. Also auch auf der Traingsfläche.
                     <p><a href="docs/Schutzkonzept ab 06.12.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
                 
