--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <b></b>
                     <b></b>Zutritt als Fitnessabonnent:in nur noch<br/> mit gültigem Covid-Zertifikat <b>2G</b>.<br/>
                     Neu ab 20.12.21:
-                    Hygienemskenpflicht im gesamten Movimento. Also auch auf der Traingsfläche.
+                    Hygienemaskenpflicht im gesamten Movimento. Also auch auf der Trainingsfläche.
                     <p><a href="docs/Schutzkonzept ab 06.12.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
                     <b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
