--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     Neu ab 20.12.21:
                     Hygienemaskenpflicht im gesamten Movimento. Also auch auf der Trainingsfläche.
                     <p><a href="docs/Schutzkonzept ab 20.12.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
-                    <b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
+                    <p class="hidden"></p><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
