--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 – 16:30</td>
+                    <td>09:00 – 11:00</td>
                
                 </tr>
                 <tr>
@@ -383,26 +383,32 @@
                     <td nowrap='true'></td>
                     <td></td>
                     <td>&nbsp;</td>
-                    <td>14:30 – 21:00</td>
+                    <td></td>
                 </tr> 
                 </tr>
                 <tr>
                     <td nowrap='true'>Mi:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td> </td>
+                    <td>13:30 - 21:00 </td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Do:</td>
                     <td>08:00 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>09:00 – 11:00</td>
+                    <td>09:30 – 13:00</td>
+                    <tr>
+                        <td nowrap='true'></td>
+                        <td></td>
+                        <td>&nbsp;</td>
+                        <td>14:30 – 16:30</td>
+                    </tr>   
                 </tr>
                 <tr>
                     <td nowrap='true'>Fr:</td>
                     <td>07:30 – 20:00</td>
                     <td>&nbsp;</td>
-                    <td>13:00 – 14:00</td>
+                    <td>13:30 – 14:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'></td>
