--- a/index.html
+++ b/index.html
@@ -273,10 +273,8 @@
                 <b></b> 
                
                     <b></b>
-                    <b></b>Zutritt als Fitnessabonnent:in nur noch<br/> mit gültigem Covid-Zertifikat <b>2G</b>.<br/>
-                    Neu ab 20.12.21:
-                    Hygienemaskenpflicht im gesamten Movimento. Also auch auf der Trainingsfläche.
-                    <p><a href="docs/Schutzkonzept ab 20.12.2021 - Movimento Fitness.pdf" target="_blank">Aktuelles Schutzkonzept</b></a><br/></p>
+                    <b></b>Im Fitness Aufhebung der Hygienemasken- und Zertifikatspflicht ab 17.02.2022.
+                    (Weiterhin gilt Hygienemaskenpflicht während der Physiobehandlung.)</b>
                     <p class="hidden"><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
