--- a/index.html
+++ b/index.html
@@ -273,8 +273,9 @@
                 <b></b> 
                
                     <b></b>
-                    <b></b>Im Fitness Aufhebung der Hygienemasken- und Zertifikatspflicht ab 17.02.2022.
-                    (Bis auf weiteres Hygienemasken während der Physiobehandlung sinnvoll, aber nicht Pflicht.)</b>
+                    <b></b>Öffnungszeiten Ostern:<br/></b>
+                    <b></b>Karfreitag 15.4.22 und Ostermontag 18.4.22 geschlossen.<br/>
+                    Ansonsten gelten die normalen Öffnungszeiten.</b>
                     <p class="hidden"><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
