--- a/index.html
+++ b/index.html
@@ -277,10 +277,11 @@
                     <b></b> Wir sind mit von der Partie!
                     Für Fitnesskund*innen: Erfasse deine Bewegungsminuten, welche du im Movimento absolvierst.
                     Für die Bevölkerung: offener Nachmittag/Abend im Movimento:
-                    Mittwoch, 11.05.2022, 14.00-21.00 Uhr
+                    <br/> Mittwoch, 11.05.2022, 14.00-21.00 Uhr
                     Freitag, 20.05.2022, 15.30-20.00 Uhr
                     <br/>
-                    Weitere Informationen: https://www.coopgemeindeduell.ch/gemeinden/oberdorf-bl-12566#events:</b>
+                    <a class="more" href="https://www.coopgemeindeduell.ch/gemeinden/oberdorf-bl-12566#events:" role="button"></a>Weitere Informationen:
+                     </b>
                     <p class="hidden"><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
