--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <br/> Mittwoch, 11.05.2022, 14.00-21.00 Uhr
                     Freitag, 20.05.2022, 15.30-20.00 Uhr
                     <br/>
-                    <a class="more" href="https://www.coopgemeindeduell.ch/gemeinden/oberdorf-bl-12566#events:" role="button"></a>Weitere Informationen:
+                    <a href="https://www.coopgemeindeduell.ch/gemeinden/oberdorf-bl-12566#events:" target="_blank"><b> Weitere Informationen </b></a>
                      </b>
                     <p class="hidden"><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
