--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     Für Fitnesskund*innen: Erfasse deine Bewegungsminuten, welche du im Movimento absolvierst.
                     Für die Bevölkerung: offener Nachmittag/Abend im Movimento:
                     <br/> Mittwoch, 11.05.2022, 14.00-21.00 Uhr
-                    Freitag, 20.05.2022, 15.30-20.00 Uhr
+                    <br/> Freitag, 20.05.2022, 15.30-20.00 Uhr
                     <br/>
                     <a href="https://www.coopgemeindeduell.ch/gemeinden/oberdorf-bl-12566#events:" target="_blank"><b> Weitere Informationen </b></a>
                      </b>
