--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                
                     <b></b>
                     <b></b>Pfingstmontag, 06.07.22<br/></b>
-                    <b>geschlossen.</b> 
+                    <b>ist das Movimento geschlossen.</b> 
                     <br/>
                     
                      </b>
