--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/Sch-ne-Pfingsten-SM-opt-C-Kathrin39-fotolia5afec793dda0e.jpgg"/>
                 <h1>Aktuell</h1>
                 <b></b> 
                
@@ -298,6 +299,7 @@
         </div>
         <div class="col-sm-6 hidden">
             <div class="new well">
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
                 <h1>Aktuell:</h1>
                 
                 <p class="hidden">Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
