--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/Sch-ne-Pfingsten-SM-opt-C-Kathrin39-fotolia5afec793dda0e.jpgg"/>
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/Sch-ne-Pfingsten-SM-opt-C-Kathrin39-fotolia5afec793dda0e.jpg"/>
                 <h1>Aktuell</h1>
                 <b></b> 
                
