--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                 
                 <h1>Aktuell</h1>
                 <b></b> 
-                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/83675.png"/>
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/nordic-walking.png"/>
                     <b></b>
-                    <b></b>Pfingstmontag, 06.06.22<br/></b>
-                    <p>ist das Movimento geschlossen.</p> 
+                    <b></b>Nordic Walking neu:<br/></b>
+                    <p>Mittwoch 14.00 bis 15.30.</p> 
                     <br/>
                     
                      </b>
