--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                 
                 <h1>Aktuell</h1>
                 <b></b> 
-                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/4336826.png"/>
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/Sonenschirm.png"/>
                     <b></b>
                     <b></b>Das Nordic Walking geht in die Sommerpause.🌴<br/></b>
-                    <p>Wir starten voraussichtlich wieder im September.</p> 
+                    <p>Wir starten voraussichtlich <br/> wieder im September.</p> 
                     <br/>
                     
                      </b>
