--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                 
                 <h1>Aktuell</h1>
                 <b></b> 
-                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/Sonenschirm.png"/>
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/palme.jpeg"/>
                     <b></b>
-                    <b></b>Das Nordic Walking geht in die Sommerpause.🌴<br/></b>
+                    <b></b>Das Nordic Walking geht in die Sommerpause.<br/></b>
                     <p>Wir starten voraussichtlich <br/> wieder im September.</p> 
                     <br/>
                     
