--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 
                 <h1>Aktuell</h1>
                 <b></b> 
-                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/palme.jpeg"/>
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/vecteezy_palm-tree_1189405.png"/>
                     <b></b>
                     <b></b>Das Nordic Walking geht in die Sommerpause.<br/></b>
                     <p>Wir starten voraussichtlich <br/> wieder im September.</p> 
