--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <b></b>Das Nordic Walking geht in die Sommerpause.<br/></b>
                     <p>Wir starten voraussichtlich <br/> wieder im September.</p> 
                     <br/>
-                    <p>Bundesfeiertag 1. August 2022 geschlossen.</p>
+                    <p>Bundesfeiertag 1. August 2022 <br>geschlossen.</br></p>
                     
                      </b>
                     <p class="hidden"><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
