--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                 
                 <h1>Aktuell</h1>
                 <b></b> 
-                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="gui_exclamation_icon_157664.png"/>
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/nordic-walking.png"/>
                     <b></b>
-                    <b></b>Das Nordic Walking findet jeweils 
+                    <b></b>Das Nordic Walking findet jeweils <br> 
                     Dienstag 15:00- 16:30 statt.<br/></b>
                     
                     <br/>
