--- a/team.html
+++ b/team.html
@@ -183,7 +183,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Matthias&nbsp;Mühlberg</h1>
                     <p>
-                        Sporttherapeut i.A.
+                        Sporttherapeut
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
