--- a/Matthias_muehlberg.html
+++ b/Matthias_muehlberg.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Matthias&nbsp;Mühlberg</h2>
-            <p>Sporttherapeut i.A<br/>
+            <p>Sporttherapeut<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
@@ -122,7 +122,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2021</div>
-        <div class="col-xs-9">Sporttherapeut i.A. Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+        <div class="col-xs-9">Sporttherapeut Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2021</div>
