--- a/team.html
+++ b/team.html
@@ -185,7 +185,7 @@
                     <p>
                         Sporttherapeut
                         <br/>                                            
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:matthias.muehlberg@physiomovimento.ch">E-Mail</a>
                         <br/<>
                         <a href="Matthias_muehlberg.html" role="button">
                             Mehr&hellip;
