--- a/Matthias_muehlberg.html
+++ b/Matthias_muehlberg.html
@@ -112,7 +112,7 @@
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Matthias&nbsp;Mühlberg</h2>
             <p>Sporttherapeut<br/>
-            <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
+            <a href="mailto:matthias.muehlberg@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
