--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
                         <td nowrap='true'></td>
                         <td></td>
                         <td>&nbsp;</td>
-                        <td>12:00 – 15:00</td>
+                        <td>12:00 – 14:00</td>
                     </tr> 
                     <tr>
                         <td nowrap='true'></td>
                         <td></td>
                         <td>&nbsp;</td>
-                        <td>16:30 – 21:00</td>
+                        <td>15:30 – 21:00</td>
                     </tr>  
                
                 </tr>
@@ -416,8 +416,14 @@
                     <td nowrap='true'>Fr:</td>
                     <td>07:30 – 20:00</td>
                     <td>&nbsp;</td>
-                    <td>15:30 – 20:00</td>
+                    <td>13:15 – 14:00</td>
                 </tr>
+                <tr>
+                    <td nowrap='true'></td>
+                    <td></td>
+                    <td>&nbsp;</td>
+                    <td>15:15 – 20:00</td>
+                </tr> 
                 
                 <tr>
                     <td nowrap='true'>Sa:</td>
