--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
                 <h1>Aktuell:</h1>
                 
-                <p class="hidden">Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
+                <p >Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 </p>
                 <br/>
                 </a>                    
