--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
          
 
             <a name="NeueOeffnungszeiten"></a>
-            <p>Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Weihnachten und Neujjahr.</a></p>
+            <p>Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Weihnachten und Neujahr.</a></p>
             <table>
         
                 <tr>
