--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                     <b></b>
                     <b></b>Das Nordic Walking findet jeweils <br> 
                     Dienstag 14:00- 15:30 statt.<br/></b>
+                    <p >Bitte beachten Sie unsere<br/><a href="docs/spezielle Öffnungszeiten WeihnachtenNeujahr 2019  klein.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                     
                     <br/>
                    
