--- a/index.html
+++ b/index.html
@@ -390,13 +390,13 @@
                         <td nowrap='true'></td>
                         <td></td>
                         <td>&nbsp;</td>
-                        <td>12:00 – 14:00</td>
+                        <td>12:00 – 14:15</td>
                     </tr> 
                     <tr>
                         <td nowrap='true'></td>
                         <td></td>
                         <td>&nbsp;</td>
-                        <td>15:30 – 21:00</td>
+                        <td>15:15 – 21:00</td>
                     </tr>  
                
                 </tr>
@@ -417,13 +417,19 @@
                     <td nowrap='true'>Fr:</td>
                     <td>07:30 – 20:00</td>
                     <td>&nbsp;</td>
-                    <td>13:15 – 14:00</td>
+                    <td>09:00 – 11:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'></td>
                     <td></td>
                     <td>&nbsp;</td>
-                    <td>15:15 – 20:00</td>
+                    <td>13:30 – 14:00</td>
+                </tr> 
+                <tr>
+                    <td nowrap='true'></td>
+                    <td></td>
+                    <td>&nbsp;</td>
+                    <td>15:30 – 20:00</td>
                 </tr> 
                 
                 <tr>
