--- a/team.html
+++ b/team.html
@@ -217,18 +217,18 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Daniel&nbsp;Seiler</h1>
+                    <h1>Melanie&nbsp;Mangold</h1>
                     <p>
-                        Fitness&nbsp;Betreuer/Trainer&nbsp;safs
+                        Sporttherapeutin
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
-                        <a href="daniel-seiler.html" role="button">
+                        <a href="melanie-mangold.html" role="button">
                                 Mehr&hellip;
                         </a>                        
                     </p>    
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/daniel.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Melanie.jpg">
             </div>
         </div>      
             
