--- a/melanie-mangold.html
+++ b/melanie-mangold.html
@@ -132,21 +132,15 @@
         <div class="col-lg-2 col-xs-3">2020-2022</div>
         <div class="col-xs-9">Tätigkeit als Physiotherapeutin in Privatpraxen 
             in Liestal und Oberwil</div>
+     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2019-2020</div>
         <div class="col-xs-9">Tätigkeit als Physiotherapeutin Rehaklinik Bad 
-            Schinznach AG                    
-        </div>
+            Schinznach AG </div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2014-2015</div>
-        <div class="col-xs-9"><div class="row">
-            <div class="col-lg-2 col-xs-3">2019-2020</div>
-            <div class="col-xs-9">Tätigkeit als Physiotherapeutin Rehaklinik Bad 
-                Schinznach AG                    
-            </div>
-        </div>                   
-        </div>
+        <div class="col-xs-9">Tätigkeit als Fachfrau Gesundheit in Pädiatrischer Praxis in Sissach</div>
     </div>
     <div class="row section">
         <div class="col-xs-12">
