--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <b></b>
                     <b></b>Das Nordic Walking findet jeweils <br> 
                     Dienstag 14:00- 15:30 statt.<br/></b>               
-                    <p>Bitte beachten Sie unsere<br/><a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2022.pdf" target="_blank"><b>Öffnungszeiten<br> Weihnachten/Neujahr<br/></b></a></p>
+                    <p class="hidden">Bitte beachten Sie unsere<br/><a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2022.pdf" target="_blank"><b>Öffnungszeiten<br> Weihnachten/Neujahr<br/></b></a></p>
                     
                     <br/>
                    
