--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
          
 
             <a name="NeueOeffnungszeiten"></a>
-            <p>Bitte beachten Sie die speziellen <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2022.pdf" class="preliminary" target="_blank">Öffnungszeiten an Weihnachten und Neujahr.</a></p>
+            <p class="hidden">Bitte beachten Sie die speziellen <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2022.pdf" class="preliminary" target="_blank">Öffnungszeiten an Weihnachten und Neujahr.</a></p>
             <table>
         
                 <tr>
