--- a/index.html
+++ b/index.html
@@ -274,9 +274,8 @@
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/nordic-walking.png"/>
                     <b></b>
-                    Wir sind neu Fitnessguide zertifiziert! <a href="" target="_blank"></a> <br/>
+                    Wir sind neu <a href=“http://www.fitness-guide.ch”>Fitnessguide</a> zertifiziert! <br/>
                     Klassifizierung: 3-Sterne Part Time Care<br/>
-                    <a href=“http://www.fitness-guide.ch”>Title the visitor sees.</a>
                     <b></b>Das Nordic Walking findet jeweils <br> 
                     am Freitag 14:00- 15:30 statt.<br/></b>               
                     <p class="hidden">Bitte beachten Sie unsere<br/><a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2022.pdf" target="_blank"><b>Öffnungszeiten<br> Weihnachten/Neujahr<br/></b></a></p>
