--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/nordic-walking.png"/>
                     <b></b>
-                    Wir sind neu <a href=“http://www.fitness-guide.ch”>Fitnessguide</a> zertifiziert! <br/>
+                    Wir sind neu <a href=“https://www.fitness-guide.ch”>Fitnessguide</a> zertifiziert! <br/>
                     Klassifizierung: 3-Sterne Part Time Care<br/>
                     <b></b>Das Nordic Walking findet jeweils <br> 
                     am Freitag 14:00- 15:30 statt.<br/></b>               
