--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/nordic-walking.png"/>
                     <b>
-                    Wir sind neu <a href="http://fitness-guide.ch">Fitnessguide</a>zertifiziert! <br/>
+                    Wir sind neu <a href="http://fitness-guide.ch">Fitnessguide</a> zertifiziert!</b> <br/>
                     Klassifizierung: 3-Sterne Part Time Care</b><br/>
                     <b>Das Nordic Walking findet jeweils <br> 
-                    am Freitag 14:00- 15:30 statt.<br/></b>               
+                    am Freitag 14:00- 15:30 statt.<br/>               
                     <p class="hidden">Bitte beachten Sie unsere<br/><a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2022.pdf" target="_blank"><b>Öffnungszeiten<br> Weihnachten/Neujahr<br/></b></a></p>
                     
                     
