--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <b>
                     Wir sind neu <a href="http://fitness-guide.ch">Fitnessguide</a> zertifiziert!</b> <br/>
                     Klassifizierung: <br>3-Sterne Part Time Care</b><br/>
-                    <b>Das Nordic Walking findet <br>jeweils  
+                    <b>Das Nordic Walking findet jeweils<br>  
                     am Freitag 14:00- 15:30 statt.<br/>               
                     <b>Bitte beachten Sie unsere<br></b><a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2023.pdf" target="_blank"><b> Öffnungszeiten Ostern/Pfingsten<br/></b></a>
                     
