--- a/Luca.html
+++ b/Luca.html
@@ -106,11 +106,11 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/Neue Fotos/Kahrin.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/luca.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Kathrin&nbsp;Caminada</h2>
+            <h2>Luca&nbsp;Martin</h2>
             <p>Sporttherapeutin i.A.<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
@@ -121,12 +121,20 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2020</div>
+        <div class="col-lg-2 col-xs-3">Seit 2023</div>
         <div class="col-xs-9">Sporttherapeutin i.A. Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2020</div>
-        <div class="col-xs-9">Schwimmlehrerin Schwimmschule Delfin Birsfelden</div>
+        <div class="col-lg-2 col-xs-3">2022-2023</div>
+        <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patienten im sportmedizinische Ambulatorium, Universität Basel</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2022</div>
+        <div class="col-xs-9">Aushilfe Service bei Wassermann-Catering, Basel</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">seit 2018</div>
+        <div class="col-xs-9">Kundenaufnahme, Bedienung und Speiseeishersteller Gabriella Gelato Artigianale Oberwil, BL </div>
     </div>
    
 
@@ -137,7 +145,7 @@
     </div>
     <div class="row">
         <ul>
-            <li>2019 Beginn Bachelor of Science in Sport, Bewegung und Gesundheit Universität Basel</li>
+            <li>2020 Beginn Bachelor of Science in Sportwissenschaft (Prävention und Gesundheitsförderung), Basel</li>
         </ul>
     </div>
     <div class="row">
