--- a/team.html
+++ b/team.html
@@ -230,8 +230,24 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Melanie.jpg">
             </div>
-        </div>      
-            
+            <div class="col-sm-6 col-xs-12">
+                <div class="portrait-well">
+                    <div class="col-md-5 col-xs-12">
+                        <h1>Janik&nbsp;Arnet</h1>
+                        <p>
+                            Sporttherapeut&nbsp;BSc&nbsp;
+                            <br/>
+                            <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                            <br/<>
+                            <a href="janik_arnet.html" role="button">
+                                    Mehr&hellip;
+                            </a>                        
+                        </p>
+                    </div>
+                    <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Janik Arnet end.png">
+                </div>  
+            </div> 
+        </div>                                
     </div
     </div> 
     <div class="row">
