--- a/team.html
+++ b/team.html
@@ -233,20 +233,19 @@
             <div class="col-sm-6 col-xs-12">
                 <div class="portrait-well">
                     <div class="col-md-5 col-xs-12">
-                        <h1>Janik&nbsp;Arnet</h1>
+                        <h1>Lucak&nbsp;Martin</h1>
                         <p>
-                            Sporttherapeut&nbsp;BSc&nbsp;
-                            <br/>
-                            <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                            <br/<>
-                            <a href="janik_arnet.html" role="button">
+                        Sporttherapeut&nbsp;BSc&nbsp;
+                        <br/>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <br/<>
+                        <a href="Luca.html" role="button">
                                     Mehr&hellip;
-                            </a>                        
-                        </p>
-                    </div>
-                    <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Janik Arnet end.png">
-                </div>  
-            </div> 
+                         </a>                        
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/luca.jpg">
+            </div>   
         </div>                                
     </div
     </div> 
