--- a/team.html
+++ b/team.html
@@ -233,9 +233,9 @@
             <div class="col-sm-6 col-xs-12">
                 <div class="portrait-well">
                     <div class="col-md-5 col-xs-12">
-                        <h1>Lucak&nbsp;Martin</h1>
+                        <h1>Luca&nbsp;Martin</h1>
                         <p>
-                        Sporttherapeut&nbsp;BSc&nbsp;
+                        Sporttherapeut 
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
