--- a/team.html
+++ b/team.html
@@ -248,7 +248,7 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/luca.jpg">
             </div>   
         </div>                                
-    </div
+    </div>
     <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
