--- a/team.html
+++ b/team.html
@@ -228,7 +228,7 @@
                         </a>                        
                     </p>    
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Melanie.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Melanieneu.jpg">
             </div>
             </div> 
         <div class="col-sm-6 col-xs-12">
@@ -245,7 +245,7 @@
                          </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/luca.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/lucaneu.jpg">
             </div>   
         </div>                                
     </div>
