--- a/Luca.html
+++ b/Luca.html
@@ -122,18 +122,18 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2023</div>
-        <div class="col-xs-9">Sporttherapeutin i.A. Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+        <div class="col-xs-9">Sporttherapeut Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2022-2023</div>
-        <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patienten im sportmedizinische Ambulatorium, Universität Basel</div>
+        <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patient:innen im sportmedizinische Ambulatorium, Universität Basel</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2022</div>
         <div class="col-xs-9">Aushilfe Service bei Wassermann-Catering, Basel</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2018</div>
+        <div class="col-lg-2 col-xs-3">Seit 2018</div>
         <div class="col-xs-9">Kundenaufnahme, Bedienung und Speiseeishersteller Gabriella Gelato Artigianale Oberwil, BL </div>
     </div>
    
