--- a/Luca.html
+++ b/Luca.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Luca&nbsp;Martin</h2>
-            <p>Sporttherapeutin i.A.<br/>
+            <p>Sporttherapeut<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
