--- a/Luca.html
+++ b/Luca.html
@@ -126,7 +126,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2022-2023</div>
-        <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patient:innen im sportmedizinische Ambulatorium, Universität Basel</div>
+        <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patient:innen im sportmedizinischen Ambulatorium, Universität Basel</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2022</div>
