--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
          
 
             <a name="NeueOeffnungszeiten"></a>
-            <b>Bitte beachten Sie die speziellen </b><a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2023.pdf" class="preliminary" target="_blank">Öffnungszeiten an den kommenden Feiertagen.</a>
+            <p class="hidden"><b>Bitte beachten Sie die speziellen </b><a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2023.pdf" class="preliminary" target="_blank">Öffnungszeiten an den kommenden Feiertagen.</a></p>
             <table>
         
                 <tr>
