--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                    
                     Wir sind <a href="http://fitness-guide.ch">Fitnessguide</a> zertifiziert.</b>
                     <br>(3-Sterne Part Time Care)</b><br/>
+                    <br><br/>
                     <b>Nordic Walking:<br>  
                     jeweils Freitag 14:00- 15:30<br/>               
                     <p class="hidden"><b>Bitte beachten Sie unsere<br></b><a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2023.pdf" target="_blank"><b> Öffnungszeiten  an den <br>kommenden Feiertagen<br/></b></a></p>
@@ -321,6 +322,7 @@
                 <a class="more" href="docs/FAQ.pdf" role="button">
                     FAQ&hellip;
                 </a>
+                <a href="docs/Datenschutzerklärung.pdf" target="_blank"><b></b>Datenschutzerklärung Website</b><br/>
             </div>
         </div>
     </div>    
@@ -340,9 +342,8 @@
             <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                 <h1>Fitness</h1>
-                <p>Kraft- und Ausdauertraining, professionell begleitet.<br/>
-                <br/><b>Für die Movimento-freie Zeit:</b><br/></p>              
-                <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b></b>Die regelmässige Aktivität</b><br/>
+                <p>Kraft- und Ausdauertraining, professionell begleitet.<br/>             
+                <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b></b>Warum regelmässige Aktivität?</b><br/>
                 <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b></b>Aufwärmen</b><br/>
                 <a href="docs/3 - Das Ausdauertraining.pdf" target="_blank"><b></b>Ausdauer</b><br/>
                 <a href="docs/4 - Das Krafttraining.pdf" target="_blank"><b></b>Kraft</b><br/>
