--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="col-sm-6">
             <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
-                <h1>Fitness</h1><br/> 
+                <h1>Fitness</h1> 
                 <p>Kraft- und Ausdauertraining, professionell begleitet.<br/>             
                 <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b></b>Warum regelmässige Aktivität?</b><br/>
                 <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b></b>Aufwärmen</b><br/>
