--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <a class="more" href="docs/FAQ.pdf" role="button">
                     FAQ&hellip;
                 </a>
-                <a href="docs/Datenschutzerklärung.pdf" target="_blank"><b></b>Datenschutzerklärung Website</b><br/>
+                <a href="docs/Datenschutzerklärung.pdf" target="_blank"><b></b>Datenschutzerklärung Website</b><br/></a>
             </div>
         </div>
     </div>    
